--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "freibad-delligsen",
   "type": "module",
-  "version": "4.2.0",
+  "version": "5.1.0-alpha1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,13 +13,18 @@
     "defaults"
   ],
   "dependencies": {
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.13.2",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.7",
     "astro-icon": "^0.8.1",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "markdown-it": "^14.0.0",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.23"
   }
 }
