--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 locale: 'de'
 
 media_folder: "src/assets/images" # Location where files will be stored in the repo
-public_folder: "src/assets/images" # The src attribute for uploaded media
+public_folder: "../../assets/images" # The src attribute for uploaded media
 
 collections:
   - name: "Neuigkeiten" # Used in routes, e.g., /admin/collections/blog
