complete cms config

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,11 +35,27 @@ collections:
       - { label: "Farbe", name: "color", widget: "string", required: true}
       - { label: "Icon", name: "icon", widget: "string", required: true}
       - { label: "Index für Anordnung", name: "Index", widget: "string", required: true}
+  - name: "preise"
+    label: "Preise"
+    folder: "src/content/preise" # The path to the folder where the documents are stored
+    fields: # The fields for each document, usually in frontmatter
+      - { label: "Titel", name: "title", widget: "string", required: true}
+      - { label: "Zeile 1 Beschreibung", name: "pos1", widget: "string", required: true}
+      - { label: "Zeile 1 Wert", name: "pos1_num", widget: "string", required: true}
+      - { label: "Zeile 2 Beschreibung (optional)", name: "pos2", widget: "string" }
+      - { label: "Zeile 2 Wert (optional)", name: "pos2_num", widget: "string" }
+      - { label: "Zeile 3 Beschreibung (optional)", name: "pos3", widget: "string" }
+      - { label: "Zeile 3 Wert (optional)", name: "pos3_num", widget: "string" }
+      - { label: "Badge oben (optional)", name: "badge_top", widget: "string" }
+      - { label: "Badge unten (optional)", name: "badge_bottom", widget: "string" }
+      - { label: "Farbe", name: "color", widget: "string", required: true}
+      - { label: "Icon", name: "icon", widget: "string", required: true}
+      - { label: "Index für Anordnung", name: "Index", widget: "string", required: true}
   - name: "veranstaltungen"
     label: "Veranstaltungen"
     folder: "src/content/veranstaltungen" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
       - { label: "Titel", name: "title", widget: "string" }
-      - { label: "Datum", name: "pubDate", widget: "datetime" }
+      - { label: "Datum", name: "date", widget: "datetime" }
       - { label: "Beschreibung (optional)", name: "description", widget: "string" }
