--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -57,5 +57,5 @@ collections:
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
       - { label: "Titel", name: "title", widget: "string" }
-      - { label: "Datum", name: "date", widget: "datetime" }
+      - { label: "Datum", name: "date", widget: "datetime", time_format: false, date_format: "DD.MM.YYYY" }
       - { label: "Beschreibung (optional)", name: "description", widget: "string" }
