--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   ],
   "dependencies": {
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
-    "astro": "^5.1.7",
-    "astro-icon/components": "^1.1.5",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/tailwind": "^5.1.5",
+    "astro": "^5.6.0",
+    "astro-icon": "^1.1.5",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "markdown-it": "^14.0.0",
